# usn-journal-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/skills/windows-etw-performance-tracing/: SKILL.md
.github/skills/windows-etw-performance-tracing/references/: etw-workflow.md
.github/skills/windows-rust-benchmark-harness/: SKILL.md
.github/skills/windows-rust-benchmark-harness/references/: criterion-workflow.md
.github/skills/windows-rust-flamegraph-profiling/: SKILL.md
.github/skills/windows-rust-flamegraph-profiling/references/: flamegraph-workflow.md
.github/workflows/: publish.yml  rust.yml
benches/: journal.rs  path_resolver.rs  raw_mft.rs  raw_mft_ingest.rs
benches/support/: raw_mft_ingest_shared.rs
docs/: raw-mft-read.md  raw_mft_benchmark_workflow.md  raw_mft_etw_workflow.md  raw_mft_parallel_ingest_findings.md
examples/: change_monitor.rs  deletion_forensic.rs  enum_mft.rs  journal_pretty_print.rs  journal_tail_wait.rs  pretty_print.rs  raw_mft.rs  raw_mft_parallel_chunks.rs  raw_mft_parallel_ingest_profile.rs  raw_mft_profile.rs  raw_mft_serial_read.rs  read_journal.rs
examples/common/: mod.rs
scripts/: capture-raw-mft-etw.ps1  measure-raw-mft-ingest.ps1  summarize-raw-mft-etw.ps1
src/: errors.rs  file_attributes.rs  journal.rs  lib.rs  mft.rs  path.rs  path_resolver.rs  privilege.rs  record.rs  test_support.rs  test_utils.rs  tests.rs  tests_utils.rs  time.rs  types.rs  unaligned.rs  usn_entry.rs  usn_journal.rs  usn_record.rs  utils.rs  volume.rs
src/journal/: data.rs  defaults.rs  entry.rs  iter.rs  journal.rs  mod.rs  options.rs  reason.rs  tests.rs
src/mft/: entry.rs  iter.rs  mft.rs  mod.rs  options.rs  tests.rs
src/path/: entry.rs  in_memory_tree.rs  mod.rs  resolve.rs  resolver.rs  tests.rs  util.rs
src/raw_mft/: README.md  attr_list.rs  attr_list_profile.rs  attribute.rs  attribute_capture.rs  attribute_fold.rs  batch.rs  boot.rs  builder_common.rs  chunk_plan.rs  data_run.rs  entry.rs  extent.rs  history.rs  ingest_support.rs  init.rs  init_support.rs  io.rs  iter.rs  mod.rs  name_selection.rs  options.rs  parallel.rs  parallel_executor.rs  parallel_plan.rs  path_resolver.rs  profile.rs  reader.rs  record.rs  schedule_profile.rs  serial_driver.rs  tests.rs  work_plan.rs
src/raw_mft/bootstrap/: discovery.rs  mod.rs
src/raw_mft/entry_build/: batch.rs  capture.rs  entry.rs  fold.rs  mod.rs  names.rs
src/raw_mft/layout/: attribute.rs  boot.rs  data_run.rs  extent.rs  mod.rs  record.rs  usa_fixup.rs
src/raw_mft/layout/attribute/: headers.rs  iter.rs  view.rs
src/raw_mft/ondisk/: extent.rs  fixup.rs  mod.rs  record.rs  usa_fixup.rs
src/raw_mft/parallel/: chunks.rs  executor.rs  mod.rs  scan.rs
src/raw_mft/serial/: engine.rs  iter.rs  mod.rs  profile.rs
support/: raw_mft_ingest_support.rs
tests/: filetime_roundtrip.rs  in_memory_tree.rs  path_resolver_consistency.rs  raw_mft_mft_consistency.rs  raw_mft_parallel_chunk_consistency.rs  raw_mft_path_resolver.rs  refs_unsupported.rs  refs_v3_ids.rs
