[package]
name = "usn-journal-rs"
version = "0.4.0"
edition = "2024"
description = "A Rust library for working with the NTFS USN change journal and enumerating the MFT."
license = "MIT"
repository = "https://github.com/wangfu91/usn-journal-rs"
keywords = ["usn-journal", "filesystem", "ntfs", "mft", "refs"]
categories = ["filesystem", "os::windows-apis"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
chrono = "0.4"
log = "0.4"
lru = "0.16"
thiserror = "2.0"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation", 
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Ioctl",
    "Win32_System_Time",
    "Win32_System_Threading",
]

[dev-dependencies]
injectorpp = "0.4"

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false
