[package]
name = "usn-journal-rs"
version = "0.5.0"
edition = "2024"
description = "A Rust library for working with the NTFS USN change journal and enumerating the MFT."
license = "MIT"
repository = "https://github.com/wangfu91/usn-journal-rs"
keywords = ["usn-journal", "filesystem", "ntfs", "mft", "refs"]
categories = ["filesystem", "os::windows-apis"]

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

[dependencies]
bitflags = "2"
log = "0.4"
lru = "0.18"
rustc-hash = "2"
thiserror = "2"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Ioctl",
    "Win32_System_Time",
    "Win32_System_Threading",
]

[dev-dependencies]
injectorpp = "0.5"
divan = "0.1"

[[bench]]
name = "raw_mft"
harness = false

[[bench]]
name = "raw_mft_ingest"
harness = false

[[bench]]
name = "journal"
harness = false

[[bench]]
name = "path_resolver"
harness = false

[profile.test]
opt-level = 0
debug = true
incremental = false

[profile.bench]
lto = "thin"
